# Estacionamiento-Arduino

./: .env.docker.example  .gitignore  AGENTS.md  docker-compose.yml  entrada.ino  package-lock.json  render.yaml  salida.ino
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py  scheduler.py
backend/app/api/: deps.py  router.py
backend/app/connectors/: supabase_auth.py
backend/app/core/: config.py  errors.py  security.py
backend/app/db/: create_admin.py  expire_tickets.py  migrate.py  session.py  sync_push.py
backend/app/models/: archived_ticket.py  audit.py  backup.py  device.py  enums.py  parking.py  payment.py  staff.py  sync_state.py  ticket.py
backend/app/repositories/: archived_tickets.py  audit.py  backups.py  devices.py  parking.py  payments.py  staff.py  tickets.py
backend/app/schemas/: auth.py  common.py  payments.py  reports.py  settings.py  status.py  sync.py  tickets.py
backend/app/services/: admin_reports.py  auth.py  auth_bootstrap.py  backups.py  entry_flow.py  exit_flow.py  payments.py  pricing.py  public_tickets.py  realtime.py  reports.py  staff_users.py  sync_push.py  ticket_codes.py  ticket_expiration.py
backend/tests/: conftest.py
backend/tests/integration/: test_admin_panel_db_flow.py  test_admin_reports_ws.py  test_admin_sync_route.py  test_admin_users.py  test_auth_bootstrap.py  test_public_payment_flow.py
backend/tests/unit/: test_config.py  test_db_session.py  test_device_repository.py  test_health.py  test_migrate.py  test_migration_revisions.py  (+4 more)
(+122 files in other folders)
